--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 	<div id="webgl"></div>
+	<script src="./libs/dat.gui/build/dat.gui.min.js"></script>
 	<script src="./libs/three.js/build/three.js"></script>
+	<script src="./libs/three.js/examples/js/controls/OrbitControls.js"></script>
 	<script src="./main.js"></script>
 </body>
 </html>
+
+libs\three.js\examples\js\controls
